@@ -55,47 +55,7 @@ def pre_save(parent_attr, left_attr, right_attr, tree_id_attr, level_attr):
                 cursor = connection.cursor()
                 db_table = qn(opts.db_table)
                 if parent is None:
-                    # Move this node and its descendants, making the
-                    # node a new root node.
-                    move_subtree_query = """
-                    UPDATE %(table)s
-                    SET %(level)s = %(level)s - %%s,
-                        %(left)s = %(left)s - %%s,
-                        %(right)s = %(right)s - %%s,
-                        %(tree_id)s = %%s
-                    WHERE %(left)s >= %%s AND %(left)s <= %%s
-                      AND %(tree_id)s = %%s""" % {
-                        'table': db_table,
-                        'level': qn(opts.get_field(level_attr).column),
-                        'left': qn(opts.get_field(left_attr).column),
-                        'right': qn(opts.get_field(right_attr).column),
-                        'tree_id': qn(opts.get_field(tree_id_attr).column),
-                    }
-                    tree_id = getattr(instance, tree_id_attr)
-                    new_tree_id = instance._tree_manager.get_next_tree_id()
-                    edge_change = getattr(instance, left_attr) - 1
-                    cursor.execute(move_subtree_query, [
-                        getattr(instance, level_attr),
-                        edge_change, edge_change, new_tree_id,
-                        getattr(instance, left_attr),
-                        getattr(instance, right_attr),
-                        tree_id])
-
-                    # Close the gap left after the subtree was moved
-                    target_left = getattr(instance, left_attr) - 1
-                    gap_size = (getattr(instance, right_attr) -
-                                getattr(instance, left_attr) + 1)
-                    instance._tree_manager.close_gap(gap_size, target_left,
-                                                     tree_id)
-
-                    # The model instance is yet to be saved, so make sure its
-                    # new tree values are present.
-                    setattr(instance, left_attr,
-                            getattr(instance, left_attr) - edge_change)
-                    setattr(instance, right_attr,
-                            getattr(instance, right_attr) - edge_change)
-                    setattr(instance, level_attr, 0)
-                    setattr(instance, tree_id_attr, new_tree_id)
+                    instance._tree_manager.make_root_node(instance)
                 elif old_parent is None:
                     # Check the validity of the new parent
                     if (getattr(parent, tree_id_attr) ==
